--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <div id="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
-            <!-- To Do: WifiIcon -->
+             <!-- To Do: Wifi Icon -->
+            <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
             <span>18:43</span>
@@ -18,7 +19,13 @@
             <span>110%</span>
             <!-- Bettery Icon -->
             <!-- Lightning Icon -->
+            <i class="fas fa-battery-full"></i>
+            <i class="fas fa-bolt"></i>
         </div>
     </div>
+    <script
+    src="https://kit.fontawesome.com/6478f529f2.js"
+    crossorigin="anonymous"
+  ></script>
 </body>
 </html>
