--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
     <header class="welcome-header">
         <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
-        <p class="welcome-header__text">If you have a Kokoa Account, log in with your email or phone number</p>
+        <p class="welcome-header__text">If you have a Kokoa Account, log in with <br> 
+            your email or phone number</p>
     </header>
 
     <form id="login-form">
